--- a/configure.in
+++ b/configure.in
@@ -1,65 +1,58 @@
-dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.4 2002/03/06 13:07:07 greve Exp $
-AC_INIT(configure.in)
+# Process this file with autoconf to produce a configure script.
+# $Id: configure.in,v 1.5 2002/07/23 02:02:12 dnelson Exp $
+AC_INIT(spamass-milter, 0.1.2)
+AC_PREREQ(2.53)
+AC_REVISION($Revision: 1.5 $)
+AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
-PACKAGE="spamass-milter"
-MAJOR_VERSION=0
-MINOR_VERSION=1
-MICRO_VERSION=2
-VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
-
-AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
-AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
-AC_SUBST(PACKAGE)
-AC_SUBST(VERSION)
-
-dnl Initialize automake now
-AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
-AC_PREFIX_DEFAULT("/usr/local")
-
-dnl checks for needed compilers
-CFLAGS=""
-if test x${CXXFLAGS+set} = xset ; then
-  :
-else
-  CXXFLAGS="-O2"
-fi
-AC_PROG_CC
-AC_PROG_CXX
-AC_PROG_RANLIB
-
-dnl search for spamc
-AC_PATH_PROG(SPAMC, spamc)
-if test "$SPAMC" = "" ; then
-   AC_MSG_ERROR("Spamc not found. Is SpamAssassin installed?")
-fi
-AC_DEFINE_UNQUOTED(SPAMC, "$SPAMC")
-AC_SUBST(SPAMC)
-
-dnl now some other stuff
+# Initialize automake now
 AM_CONFIG_HEADER(config.h)
-AM_SANITY_CHECK
-AC_PROG_AWK
-AC_PROG_LN_S
-AC_PROG_INSTALL
-AC_HEADER_STDC
-AC_CANONICAL_HOST
+AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
-dnl check for GNU POSIX thread library
-AC_CHECK_LIB(pthread, pthread_create)
+# Checks for programs.
+AC_PROG_CXX
+AC_PROG_CC
 
-dnl
-dnl debugging ?!
-dnl
-AC_ARG_ENABLE(debug,
-     [  --enable-debug          turn on debugging],
-     [case "${enableval}" in
-       yes) debug=true ;;
-       no)  debug=false ;;
-       *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
-     esac],[debug=false])
-AM_CONDITIONAL(DEBUG, test x$debug = xtrue)
+# Search for spamc
+AC_PATH_PROG(SPAMC, spamc)
+if test "x$SPAMC" = x ; then
+   AC_MSG_ERROR([Spamc not found. Is SpamAssassin installed?])
+fi
+AC_DEFINE_UNQUOTED(SPAMC, "$SPAMC", [location of spamc])
 
-dnl  Makefiles to create:
+# Search for pthreads, and make them the default (have to do it here else
+# the -lmilter check will fail to link)
+ACX_PTHREAD(,AC_MSG_ERROR([Cannot determine how to use pthreads]))
+CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+CXXFLAGS="$CXXFLAGS $PTHREAD_CFLAGS"
+LIBS="$LIBS $PTHREAD_LIBS"
+
+# Checks for typedefs, structures, and compiler characteristics.
+AC_C_CONST
+AC_TYPE_PID_T
+AC_TYPE_SIZE_T
+
+CF_GNU_SOURCE
+
+# Checks for library functions.
+AC_CHECK_FUNCS([vsyslog vasprintf vsnprintf])
+AC_SEARCH_LIBS(gethostbyname, nsl)
+AC_SEARCH_LIBS(connect, socket)
+AC_SEARCH_LIBS(inet_aton, resolv)
+
+# Check for libmilter and its header files in the usual locations
+LDFLAGS="$LDFLAGS -L/usr/lib/libmilter"
+AC_CHECK_LIB(milter, mi_stop,,[
+	# Older sendmails require libsm for support functions
+	AC_SEARCH_LIBS(strlcpy, sm smutil)
+	$as_unset ac_cv_lib_milter_mi_stop
+	AC_CHECK_LIB(milter, mi_stop,,[
+		AC_MSG_WARN([Cannot find libmilter])
+	])
+])
+AC_CHECK_HEADERS(libmilter/mfapi.h,,[
+	AC_MSG_ERROR([Please install mfapi.h from the sendmail distribution])
+])
+
+# Makefiles to create:
 AC_OUTPUT(Makefile)
-
