--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.5 2002/07/23 02:02:12 dnelson Exp $
+# $Id: configure.in,v 1.6 2002/07/23 03:46:41 dnelson Exp $
 AC_INIT(spamass-milter, 0.1.2)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.5 $)
+AC_REVISION($Revision: 1.6 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
@@ -47,7 +47,7 @@ AC_CHECK_LIB(milter, mi_stop,,[
 	AC_SEARCH_LIBS(strlcpy, sm smutil)
 	$as_unset ac_cv_lib_milter_mi_stop
 	AC_CHECK_LIB(milter, mi_stop,,[
-		AC_MSG_WARN([Cannot find libmilter])
+		AC_MSG_ERROR([Cannot find libmilter])
 	])
 ])
 AC_CHECK_HEADERS(libmilter/mfapi.h,,[
