--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.4 2002/07/24 16:19:53 dnelson Exp $
+## $Id: Makefile.am,v 1.5 2002/07/26 04:32:59 dnelson Exp $
 
 AUTOMAKE_OPTIONS = no-dependencies
 
@@ -10,6 +10,7 @@ MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.h.in \
 maintainer-clean-local:
 	rm -rf autom4te.cache
 
+man_MANS = 	spamass-milter.1
 sbin_PROGRAMS =	spamass-milter
 DEB_CONTRIB =	contrib/spamass-milter
 RH_CONTRIB =	contrib/spamass-milter-redhat.rc \
@@ -19,4 +20,5 @@ MISC_CONTRIB =	contrib/README.gnus
 spamass_milter_SOURCES = spamass-milter.cpp spamass-milter.h 
 EXTRA_DIST =	$(DEB_CONTRIB) \
 		$(RH_CONTRIB) \
-		$(MISC_CONTRIB)
+		$(MISC_CONTRIB) \
+		spamass-milter.1.in
