--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.7 2002/07/24 16:19:53 dnelson Exp $
+# $Id: configure.in,v 1.8 2002/07/26 04:32:59 dnelson Exp $
 AC_INIT(spamass-milter, 0.1.2)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.7 $)
+AC_REVISION($Revision: 1.8 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
@@ -55,4 +55,4 @@ AC_CHECK_HEADERS(libmilter/mfapi.h,,[
 ])
 
 # Makefiles to create:
-AC_OUTPUT(Makefile contrib/spamass-milter.spec)
+AC_OUTPUT(Makefile contrib/spamass-milter.spec spamass-milter.1)
