More cleanup for the distribution.
- Zero out ChangeLog, as it is now autogenerated by "make dist".  You
  can manually generate one with "make changelog", but your tree must
  have been checked out with CVS for it to work (i.e. the dist tarball
  won't work, but then again it will ship with a matching ChangeLog, so
  who cares)

- Add some more files to maintainer-clean-local: and distclean-local:
  targets, as the autoconf/make people can't seem to keep track of what
  files their own tools generate.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,26 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.5 2002/07/26 04:32:59 dnelson Exp $
+## $Id: Makefile.am,v 1.6 2002/08/18 20:53:46 dnelson Exp $
 
-AUTOMAKE_OPTIONS = no-dependencies
+AUTOMAKE_OPTIONS = no-dependencies foreign
 
 CLEANFILES = *~ .deps/* .libs/* .deps .libs 
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.h.in \
 	config.log config.status configure configure.lineno stamp-h.in \
 	COPYING INSTALL config.guess config.sub install-sh missing mkinstalldirs
 maintainer-clean-local:
-	rm -rf autom4te.cache
+	rm -rf autom4te.cache $(distdir) $(distdir).tar.gz
+distclean-local:
+	rm -f configure.lineno
+
+# rebuild ChangeLog during dist, but only if it's a zero-byte file
+# (i.e. clean CVS co)
+dist-hook: 
+	if test ! -s $(distdir)/ChangeLog ; then \
+		cvs2cl --fsf -S -U contrib/users -f $(distdir)/ChangeLog ; \
+	fi
+
+changelog:
+	cvs2cl --fsf -S -U contrib/users 
 
 man_MANS = 	spamass-milter.1
 sbin_PROGRAMS =	spamass-milter
