--- a/contrib/spamass-milter.spec.in
+++ b/contrib/spamass-milter.spec.in
@@ -2,11 +2,12 @@ Summary: Spamassassin Milter
 Name: spamass-milter
 Version: @VERSION@
 Release:   3
-Source:    spamass-milter-%version.tar.gz
+Source:    spamass-milter-%{version}.tar.gz
 Url: http://savannah.gnu.org/projects/spamass-milt/
 Copyright: GPL
-Group:     Networking/Mail
-BuildRoot: /var/tmp/spamass-milter-root
+Group:     System Environment/Daemons
+BuildRoot: /var/tmp/%{name}-root
+BuildRequires: spamassassin
 Requires: spamassassin
 # Requires sendmail to have milter support, too.
 Requires: sendmail
@@ -21,25 +22,41 @@ incoming mail (including things received by rmail/UUCP) through the
 SpamAssassin, a highly customizable SpamFilter.
 
 %prep
-%setup
+%setup -q
 
 %build
-./configure --prefix=$RPM_BUILD_ROOT/usr
+%configure
 make
 
 %install
-make install
-mkdir -p $RPM_BUILD_ROOT/etc/init.d
-install -m755 contrib/spamass-milter-redhat.rc $RPM_BUILD_ROOT/etc/init.d/spamass-milter
+%makeinstall
+mkdir -p $RPM_BUILD_ROOT%{_initrddir}
+install -m755 contrib/spamass-milter-redhat.rc \
+	$RPM_BUILD_ROOT%{_initrddir}/spamass-milter
+
+%preun
+test "$1" != "0" && exit 0
+service spamass-milter stop
+chkconfig --del spamass-milter
+
+%post
+chkconfig --add spamass-milter
+service spamass-milter condrestart
 
 %clean
-rm -rf $RPM_BUILD_ROOT
+test "$RPM_BUILD_ROOT" = "/" || rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root)
 %doc AUTHORS ChangeLog COPYING INSTALL NEWS README
-/usr/sbin/spamass-milter
-/etc/init.d/spamass-milter
+%{_sbindir}/spamass-milter
+%{_initrddir}/spamass-milter
+%{_mandir}/man1/spamass-milter.1*
 
 %changelog
-
+* Mon Aug 19 2002 Fritz Elfert <fritz.elfert@to.com>
+ - Use RPM macros everywhere (this fixes install of manpage)
+ - Changed Group to an official group of RedHat
+ - Added preun and post scriptlets
+ - Made clean scriptlet foolproof
+ - Added condrestart to redhat rc script
