--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.6 2002/08/18 20:53:46 dnelson Exp $
+## $Id: Makefile.am,v 1.7 2002/09/18 17:17:43 dnelson Exp $
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
@@ -16,7 +16,7 @@ distclean-local:
 # (i.e. clean CVS co)
 dist-hook: 
 	if test ! -s $(distdir)/ChangeLog ; then \
-		cvs2cl --fsf -S -U contrib/users -f $(distdir)/ChangeLog ; \
+		cvs2cl --fsf -S -U contrib/users --stdout > $(distdir)/ChangeLog ; \
 	fi
 
 changelog:
