--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.8 2002/07/26 04:32:59 dnelson Exp $
-AC_INIT(spamass-milter, 0.1.2)
+# $Id: configure.in,v 1.9 2002/09/18 17:17:43 dnelson Exp $
+AC_INIT(spamass-milter, 0.1.2+cvs)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.8 $)
+AC_REVISION($Revision: 1.9 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
