--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.15 2002/12/27 21:53:18 dnelson Exp $
-AC_INIT(spamass-milter, 0.1.3)
+# $Id: configure.in,v 1.16 2002/12/27 22:32:15 dnelson Exp $
+AC_INIT(spamass-milter, 0.1.3+cvs)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.15 $)
+AC_REVISION($Revision: 1.16 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
