--- a/contrib/spamass-milter-redhat.rc
+++ b/contrib/spamass-milter-redhat.rc
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $Id: spamass-milter-redhat.rc,v 1.2 2002/08/19 20:39:42 dnelson Exp $
+# $Id: spamass-milter-redhat.rc,v 1.3 2003/01/17 20:53:04 dnelson Exp $
 #
 # spamass-milter This script starts and stops the spamass-milter daemon
 #
@@ -20,7 +20,7 @@
 # Local spamass-milter config
 SM_SOCKET=/var/run/spamass.sock
 SM_EXTRA_FLAGS=
-[ -x /etc/sysconfig/spamass-milter ] && . /etc/sysconfig/spamass-milter
+[ -f /etc/sysconfig/spamass-milter ] && . /etc/sysconfig/spamass-milter
 
 # Check that networking is up.
 [ ${NETWORKING} = "no" ] && exit 0
