--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.9 2002/12/27 21:38:49 dnelson Exp $
+## $Id: Makefile.am,v 1.10 2003/03/06 21:37:18 dnelson Exp $
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
@@ -31,6 +31,7 @@ RH_CONTRIB =	contrib/spamass-milter-redhat.rc \
 FBSD_CONTRIB =	contrib/spamass-milter.sh
 MISC_CONTRIB =	contrib/README.gnus
 spamass_milter_SOURCES = spamass-milter.cpp spamass-milter.h 
+spamass_milter_LDADD = @LIBOBJS@
 EXTRA_DIST =	$(DEB_CONTRIB) \
 		$(RH_CONTRIB) \
 		$(FBSD_CONTRIB) \
