--- a/spamass-milter.1.in
+++ b/spamass-milter.1.in
@@ -1,4 +1,4 @@
-.\" $Id: spamass-milter.1.in,v 1.6 2002/12/23 17:08:30 dnelson Exp $
+.\" $Id: spamass-milter.1.in,v 1.7 2003/03/07 04:26:38 dnelson Exp $
 .Dd July 25, 2001
 .Os
 .Dt SPAMASS_MILTER 8
@@ -9,6 +9,7 @@
 .Nm
 .Fl p Pa socket
 .Op Fl d Ar nn
+.Op Fl D Ar host
 .Op Fl f
 .Op Fl m
 .Op Fl r Ar nn
@@ -41,6 +42,10 @@ Also log I/O operations with
 .It 3
 Also log the results of string comparisons.
 .El
+.It Fl D Ar host
+Connects to a remost spamd server on 
+.Ar host , 
+instead of using one on localhost.
 .It Fl f
 Causes
 .Nm
