--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.20 2003/03/07 05:11:37 dnelson Exp $
+# $Id: configure.in,v 1.21 2003/03/11 03:40:27 dnelson Exp $
 AC_INIT(spamass-milter, 0.1.3a+cvs)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.20 $)
+AC_REVISION($Revision: 1.21 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
@@ -28,6 +28,11 @@ CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
 CXXFLAGS="$CXXFLAGS $PTHREAD_CFLAGS"
 LIBS="$LIBS $PTHREAD_LIBS"
 
+# Checks for header files.
+AC_HEADER_STDC
+AC_HEADER_SYS_WAIT
+AC_CHECK_HEADERS([fcntl.h syslog.h sys/select.h])
+
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_PID_T
@@ -35,11 +40,18 @@ AC_TYPE_SIZE_T
 
 CF_GNU_SOURCE
 
-# If the system doesn't have poll.h, provide our own poll function
-AC_CHECK_HEADER(poll.h,,[
-	AC_MSG_NOTICE([Emulating poll with select])
-	AC_LIBOBJ(poll)
-])
+AC_ARG_ENABLE(emulate-poll, AC_HELP_STRING([--enable-emulate-poll],[use a select wrapper instead of poll (autodetected)]))
+
+# If the system doesn't have poll.h, or if the user forced it, provide
+# our own poll function
+if test x$enable_emulate_poll != xyes ; then
+AC_CHECK_HEADERS(poll.h)
+fi
+
+if test x$enable_emulate_poll = xyes -o x$ac_cv_header_poll_h = xno ; then
+AC_MSG_NOTICE([Emulating poll with select])
+AC_LIBOBJ(poll)
+fi
 
 # Checks for library functions.
 AC_CHECK_FUNCS([vsyslog vasprintf vsnprintf])
