--- a/spamass-milter.1.in
+++ b/spamass-milter.1.in
@@ -1,4 +1,4 @@
-.\" $Id: spamass-milter.1.in,v 1.8 2003/03/07 04:33:24 dnelson Exp $
+.\" $Id: spamass-milter.1.in,v 1.9 2003/06/03 06:24:54 dnelson Exp $
 .Dd July 25, 2001
 .Os
 .Dt SPAMASS_MILTER 8
@@ -11,9 +11,11 @@
 .Op Fl d Ar nn
 .Op Fl D Ar host
 .Op Fl f
+.Op Fl i Ar networks
 .Op Fl m
 .Op Fl r Ar nn
 .Op Fl u Ar defaultuser
+.Op Fl - Ar spamc flags ...
 .Sh DESCRIPTION
 The
 .Nm
@@ -46,10 +48,22 @@ Also log the results of string comparisons.
 Connects to a remost spamd server on 
 .Ar host , 
 instead of using one on localhost.
+This option is deprecated; use 
+.Fl - Fl d Ar host 
+instead.
 .It Fl f
 Causes
 .Nm
 to fork into the background.
+.It Fl i Ar networks
+Ignores messages if the originating IP is in the network(s) listed. 
+The message will be passed through without calling SpamAssassin at all.
+.Ar networks
+is a comma-separated list, where each element can be either an IP address 
+(nnn.nnn.nnn.nnn), a CIDR network (nnn.nnn.nnn.nnn/nn), or a network/netmask
+pair (nnn.nnn.nnn.nnn/nnn.nnn.nnn.nnn).  Multiple
+.Fl i
+flags will append to the list.
 .It Fl m
 Disables modification of the Subject: and Content-Type: headers and
 message body. This is useful when SpamAssassin is configured with
@@ -74,7 +88,7 @@ messages.
 .It Fl u Ar defaultuser
 Pass the username part of the first recipient to spamc with the 
 .Fl u 
-flag.  This allows user preferences files to be used. If the message is
+flag.  This allows user preferences files to be used.  If the message is
 addressed to multiple recipients, the username
 .Ar defaultuser
 is passed instead.
@@ -87,6 +101,12 @@ from user1@localdomain.com to user2@yahoo.com will make
 pass 
 .Fl u Ar user2
 to spamc.
+.It Fl - Ar spamc flags ...
+Pass all remaining options to spamc.  
+This allows you to connect to a remote spamd with
+.Fl d
+or 
+.Fl p .
 .El
 .Sh FILES
 .Bl -tag -width "indent"
