--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.22 2003/06/03 02:08:42 dnelson Exp $
+# $Id: configure.in,v 1.23 2003/06/07 19:43:20 dnelson Exp $
 AC_INIT(spamass-milter, 0.1.3a+cvs)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.22 $)
+AC_REVISION($Revision: 1.23 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
@@ -12,6 +12,9 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
+VL_PROG_CC_WARNINGS
+CFLAGS="$CFLAGS $VL_WARN_CFLAGS"
+CXXFLAGS="$CXXFLAGS $VL_WARN_CFLAGS"
 
 # Search for spamc
 dnl AC_ARG_VAR(SPAMC,[Spamc command])
