I haven't gotten a license from the author of mdoc2man.awk, so remove it and, distribute a preproccesed .man.in for systems without mdoc macros instead.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,16 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.15 2003/06/13 02:39:23 dnelson Exp $
+## $Id: Makefile.am,v 1.16 2003/06/25 15:17:22 dnelson Exp $
 
 AUTOMAKE_OPTIONS = no-dependencies foreign dist-bzip2
 
+# The number of files autoconf leaves lying around after a clean is amazing.
 CLEANFILES = *~ .deps/* .libs/* .deps .libs spamass-milter.man
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.h.in \
 	config.log config.status configure configure.lineno stamp-h.in \
-	COPYING INSTALL config.guess config.sub install-sh missing mkinstalldirs
+	COPYING INSTALL config.guess config.sub install-sh missing mkinstalldirs \
+	spamass-milter.man.in $(distdir).tar.gz $(distdir).tar.bz2
 maintainer-clean-local:
-	rm -rf autom4te* $(distdir) $(distdir).tar.gz $(distdir).tar.bz2
+	rm -rf autom4te* $(distdir)
 distclean-local:
 	rm -f configure.lineno
 
@@ -27,8 +29,12 @@ upload: dist-all
 changelog:
 	cvs2cl --no-wrap -S -U contrib/users 
 
-.1.man: mdoc2man.awk
-	$(AWK) -f mdoc2man.awk $< > $@
+# Can't distribute mdoc2man yet
+#.1.man: mdoc2man.awk
+#	$(AWK) -f mdoc2man.awk $< > $@
+
+spamass-milter.man.in: spamass-milter.1.in mdoc2man.awk
+	$(AWK) -f mdoc2man.awk spamass-milter.1.in > $@
 
 if HAVE_MDOC
 man_MANS = 	spamass-milter.1
@@ -48,6 +54,7 @@ EXTRA_DIST =	$(DEB_CONTRIB) \
 		$(RH_CONTRIB) \
 		$(FBSD_CONTRIB) \
 		$(MISC_CONTRIB) \
-		spamass-milter.1.in
+		spamass-milter.1.in \
+		spamass-milter.man.in
 
 spamass-milter.cpp: spamass-milter.h
