--- a/spamass-milter.1.in
+++ b/spamass-milter.1.in
@@ -1,4 +1,4 @@
-.\" $Id: spamass-milter.1.in,v 1.13 2003/06/09 17:19:25 dnelson Exp $
+.\" $Id: spamass-milter.1.in,v 1.14 2003/06/25 16:17:34 dnelson Exp $
 .Dd July 25, 2001
 .Os
 .Dt SPAMASS_MILTER 8
@@ -8,7 +8,7 @@
 .Sh SYNOPSIS
 .Nm
 .Fl p Ar socket
-.Op Fl b Ar spamaddress
+.Op Fl b | Fl B Ar spamaddress
 .Op Fl d Ar debugflags
 .Op Fl D Ar host
 .Op Fl f
@@ -39,6 +39,15 @@ Redirects tagged spam to the specified email address.  All envelope
 recipients are removed, and inserted into the message as
 .Ql X-Spam-Orig-To:
 headers.
+.It Fl B Ar spamaddress
+Same as
+.Fl b ,
+except the original recipients are retained.
+Only one of
+.Fl b
+and
+.Fl B
+may be used.
 .It Fl d Ar debugflags
 Enables logging.  
 .Ar debugflags 
