--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.27 2003/06/25 15:17:22 dnelson Exp $
-AC_INIT(spamass-milter, 0.1.3a+cvs)
+# $Id: configure.in,v 1.28 2003/06/26 21:57:50 dnelson Exp $
+AC_INIT(spamass-milter, 0.2.0)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.27 $)
+AC_REVISION($Revision: 1.28 $)
 AC_CONFIG_SRCDIR([spamass-milter.cpp])
 
 # Initialize automake now
