--- a/spamass-milter.1.in
+++ b/spamass-milter.1.in
@@ -1,4 +1,4 @@
-.\" $Id: spamass-milter.1.in,v 1.14 2003/06/25 16:17:34 dnelson Exp $
+.\" $Id: spamass-milter.1.in,v 1.15 2003/07/31 19:13:02 dnelson Exp $
 .Dd July 25, 2001
 .Os
 .Dt SPAMASS_MILTER 8
@@ -8,12 +8,13 @@
 .Sh SYNOPSIS
 .Nm
 .Fl p Ar socket
-.Op Fl b | Fl B Ar spamaddress
+.Op Fl b Ns | Ns Fl B Ar spamaddress
 .Op Fl d Ar debugflags
 .Op Fl D Ar host
 .Op Fl f
 .Op Fl i Ar networks
 .Op Fl m
+.Op Fl M
 .Op Fl r Ar nn
 .Op Fl u Ar defaultuser
 .Op Fl - Ar spamc flags ...
@@ -111,6 +112,22 @@ and
 or when SA is simply used to add headers for postprocessing later. 
 Updating the body through the milter interface can be slow for large
 messages.
+.It Fl M
+Like
+.Fl m ,
+but also disables creation of any SpamAssassin
+.Ql X-Spam-* 
+headers as well.  Both
+tagged and untagged mail gets passed through unchanged.  To be useful, this option should be used with the
+.Fl r ,
+.Fl b , 
+or
+.Fl B
+flags.  If 
+.Fl b
+is used, the 
+.Ql X-Spam-Orig-To:
+headers will still be added.
 .It Fl r Ar nn
 Reject scanned email if it greater than or equal to
 .Ar nn .
